--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,10 +1,29 @@
 <h1>Eat-Da-Burger!</h1>
 
-<div></div>
+<div class="notEaten">
+    <h4>Burgers not eaten yet</h4>
+    {{#each burgers}}
+        {{#unless devoured}}
+<p>
+    {{id}}. {{burger_name}}
+    <button class="devour" data-id="{{id}}" data-name="{{burger_name}}">
+		Devour it!
+	</button>
+</p>
+        {{/unless}}
+    {{/each}}
+</div>
 
-<div></div>
+<div class="eaten">
+    <h4>Eaten burgers</h4>
+    {{#each burgers}}
+        {{#if devoured}}
+            {{id}}. {{burger_name}}
+        {{/if}}
+  {{/each}}
+</div>
 
 <form>
-    <input type="text" name="burgerName" size="35">
+    <input type="text" name="burgerName" size="35"><br>
     <input type="submit" value="Submit">
 </form>
