added some package.json packages

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -25,5 +25,5 @@
 
 <form class="create-burger">
     <input type="text" id="burger-name-id" name="burgerName" size="35"><br>
-    <input type="submit" value="Submit">
+    <input id="submit-id"type="submit" value="Submit">
 </form>
